[workspace]
members = [
    "nn_fuzz",
    "nn_connector",
    "nn_slave",
    "nn_messages"
]

exclude = [
    "scripts"
]

[workspace.package]
version = "0.2.0"

[workspace.dependencies]
libafl = { path = "../LibAFL/libafl", version = "0.10", features = [] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3