[package]
name = "forkserver_libafl_cc"
version = "0.0.1"
edition = "2021"

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.0.2" }

[dependencies]
libafl = { workspace = true }
nix = "0.25"
libafl_targets = { workspace = true }
libafl_cc = { workspace = true }

[lib]
name = "libforkserver_libafl_cc"
crate-type = ["staticlib"]