[package]
name = "nn_connector"
version.workspace = true
authors = ["Shalagin Maksim <shalaginmx998@yandex.ru>"]
description = "fuzzer tcp client for neural network communication"
repository = "https://git.mobiledep.ru/iifuzzing/fuzzerclient.git"
readme = "../README.md"
license = "MIT"
keywords = ["fuzzing", "security"]
edition = "2021"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nn_connector"
crate-type = ["cdylib", "rlib"]

[dependencies]
nn_lib = { package = "nn_fuzz", path = "../nn_fuzz" }
pyo3 = { version = "0.17", features = ["extension-module"] }
libafl = { path = "../../LibAFL/libafl" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
postcard = { version = "1.0", features = ["alloc"] }
