[package]
name = "nn_connector"
version.workspace = true
authors = ["Shalagin Maksim <shalaginmx998@yandex.ru>"]
description = "fuzzer tcp client for neural network communication"
repository = "https://git.mobiledep.ru/iifuzzing/fuzzerclient.git"
readme = "../README.md"
license = "MIT"
keywords = ["fuzzing", "security"]
edition = "2021"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nn_connector"
crate-type = ["cdylib", "rlib"]

[dependencies]
libafl = { workspace = true }
nn_messages = { path = "../nn_messages", version = "0.2" }
pyo3 = { version = "0.17", features = ["extension-module"] }
postcard = { version = "1.0", features = ["alloc"] }
