[package]
name = "nn_connector"
version.workspace = true
authors = ["Vova Pupkin <pupkin@yandex.ru>"]
description = "fuzzer tcp client for neural network communication"
repository = ""
readme = "../README.md"
license = "MIT"
keywords = ["fuzzing", "security"]
edition = "2021"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nn_connector"
crate-type = ["cdylib", "rlib"]

[dependencies]
libafl = { workspace = true }
nn_messages = { path = "../nn_messages", version = "0.2" }
pyo3 = { version = "0.18", features = ["extension-module", "abi3", "abi3-py38"] }
postcard = { version = "1.0", features = ["alloc"] }

[dev-dependencies]
rand = { version = "0.8" }
