[package]
name = "nn_fuzz"
version.workspace = true
authors = ["Vova Pupkin <pupkin@yandex.ru>"]
description = "Fuzzer for executables with neural network backend"
repository = ""
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "security"]
edition = "2021"
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
observer_feedback = []
tui = []
bind_public = []

[dependencies]
nn_messages = { path = "../nn_messages", version = "0.2"}
libafl = { workspace = true }

libafl_targets = { path = "../../LibAFL/libafl_targets/" }
libafl_cc = { path = "../../LibAFL/libafl_cc/" }

mimalloc = { version = "0.1" }
clap = { version = "4.1", features = ["derive"] }
dotenv = { version = "0.15" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }
serde_json = { version = "1.0" }
postcard = { version = "1.0" }
itertools = { version = "0.10" }
typed-builder = { version = "0.10" }
ahash = { version = "0.7" }
hashbrown = { version = "0.12" }
tokio = { version = "1.24", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = {version = "0.2"}