[package]
name = "nn_slave"
version.workspace = true
authors = ["Maxim Shalagin <shalaginx998@yandex.ru>"]
description = "Fuzzer with neural network inside"
repository = "https://git.mobiledep.ru/iifuzzing/nn_fuzz/"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "testing", "security"]
edition = "2021"
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
observer_feedback = []
debug_mutations = []

[dependencies]
nn_messages = { path = "../nn_messages", version = "0.2"}
libafl = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0" }
clap = { version = "4.1", features = ["derive"] }
